test/semantic-errors/15.pas
program p;
begin writeln(-"")end.
